force-app/main/default/objects/Dealer_Vehicle__c/Dealer_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Dealer Vehicle</label>
    <nameField>
        <label>Dealer Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>