force-app/main/default/objects/Dealer_Vehicle__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Vehicles</relationshipLabel>
    <relationshipName>Dealer_Vehicles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>