force-app/main/default/objects/Dealer_Vehicle__c/fields/Is_Test_Drive_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Drive_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Drive Available</label>
    <type>Checkbox</type>
</CustomField>