force-app/main/default/objects/Dealer_Vehicle__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Dealer Vehicles</relationshipLabel>
    <relationshipName>Dealer_Vehicles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>