force-app/main/default/objects/Dealer_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Is_Test_Drive_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>